fix: Add comprehensive null safety to JSON parsing in ExternalApiService
VESSEL PARSING FIXES:
- Replace direct .get().asText() calls with null-safe helpers
- Add getTextSafely(), getDoubleSafely(), getIntegerSafely() methods
- Fix navigation status field name from NAVSTAT to STATUS
- Handle missing JSON fields gracefully

AIRCRAFT PARSING FIXES:
- Add array-specific null-safe parsing helpers
- Add getArrayElementTextSafely/DoubleSafely/IntegerSafely/BooleanSafely methods
- Improve squawk emergency detection logic
- Handle missing array elements safely

BENEFITS:
- Prevents JsonNode.asText() null pointer exceptions
- Robust parsing for incomplete mock API responses
- Better error handling and data quality
- Consistent null safety across all parsing methods

This resolves: 'Cannot invoke asText() because get() returns null' errors